--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "react": "18.2.0",
     "react-day-picker": "^9.5.1",
@@ -18,6 +20,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
