--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/speed-insights": "^1.1.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "13.4.19",
     "react": "18.2.0",
-    "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.6.0"
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   }
 }
+
