--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.19",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.474.0",
+    "next": "^13.5.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "framer-motion": "^10.16.4"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "typescript": "^5.0.0"
   }
 }
-
